--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Api Data Eror</title>
 </head>
 <body>
-    <h1>Api Checklist</h1>
+    
+    
+<h1>Api Checklist</h1>
+
+
+<script src="/api.js"></script>
 </body>
 </html>
